--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     };
 
                     try {
-                        let response = await fetch("https://formspree.io/f/xoveqrzb", {
+                        let response = await fetch("https://formspree.io/f/mdkeovkr", {
                             method: "POST",
                             headers: {
                                 "Content-Type": "application/json",
