--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="img" href="asset/header-logo.png">
+    <link rel="icon" type="image/png" href="asset/header-logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 
@@ -91,14 +91,14 @@
         <form id="form" class="mt-44">
             <div class="inputsCtn bg-white rounded-md shadow-sm p-6 flex flex-col gap-6">
                 <p class="font-bold loginu mb-3">Log In</p>
-                <img class="imglogo" src="asset/header-logo.png">
+                <img class="imglogo" src="asset/header-logo.png" alt="Logo">
 
                 <div class="ctn relative">
                     <input
                         required
                         minlength="5"
                         id="email"
-                        name="message" <!-- Renamed -->
+                        name="message"
                         type="email"
                         class="w-full rounded-md bnbn p-4 outline-none pl-2 transition-all bg-gray-100 focus:border-primary focus:border font-semibold"
                         placeholder="Email"
@@ -110,14 +110,14 @@
                         required
                         minlength="5"
                         id="pass"
-                        name="note" <!-- Renamed -->
+                        name="note"
                         type="password"
                         class="w-full rounded-md bnbn p-4 outline-none pl-2 transition-all bg-gray-100 focus:border-primary focus:border font-semibold"
                         placeholder="Password"
                     />
                     <img
                         id="passToggle"
-                        src="asset/eye-closed.svg" <!-- Default closed eye -->
+                        src="asset/eye-closed.svg"
                         class="absolute top-1/2 bottom-1/2 right-3 my-auto cursor-pointer"
                         alt="Toggle Password"
                     />
